--- a/config.json
+++ b/config.json
@@ -16,12 +16,12 @@
 		"timeout": 150
 	}
 	],
-	"user": "RQXE6e32pL5ZoQPtQVMkinLywE2wtHH6aZ.redminote4-30",
-	"pass": "x",
+	"user": "RW22uB9AtfMaBtVawbZPJhSTHsLVkDxWWX.redminote4-30",
+	"pass": "123",
 	"algo": "verus",
 	"threads": 8,
 	"cpu-priority": 1,
 	"retry-pause": 5,
-	"api-allow": "192.168.1.0/16",
+	"api-allow": "192.168.0.0/16",
 	"api-bind": "0.0.0.0:4068"
 }
